fix(zbugs): Updating anchor styling for wrapping (#3332)

--- a/apps/zbugs/src/index.css
+++ b/apps/zbugs/src/index.css
@@ -780,7 +780,7 @@ textarea.autoResize {
   }
 
   a {
-    word-break: break-all;
+    overflow-wrap: break-word;
     overflow: hidden;
   }
 }
